--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,22 +1,25 @@
-name: publish-docs
+name: Docs
+
 on:
   push:
-    branches: ["main"]
+    branches:
+    - main
+
 jobs:
-  status:
+  build:
+    name: Build and deploy docs
     runs-on: ubuntu-latest
-    name: Publish docs to GitHub Pages
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v3
         with:
-          node-version: "22"
+          node-version: 18
       - run: npm i -g moonwave@latest
       - name: Publish
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git config --global user.email "support+actions@github.com"
           git config --global user.name "github-actions-bot"
-          moonwave build --publish
+          moonwave build --publish --code src
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
